--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -1,150 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <RelativeLayout
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="?attr/colorPrimary"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="?attr/actionBarTheme"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <!-- Các CardView của bạn -->
+    <ScrollView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar">
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/cardTotalEmployees"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="16dp">
-
-            <!-- Nội dung của CardView thống kê Tổng số nhân viên -->
-            <!-- ... -->
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:padding="16dp">
-
-                <!-- Add TextView, ImageView, ProgressBar, etc. for your content -->
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Tổng số nhân viên"
-                    android:textSize="18sp" />
-
-                <!-- Add other UI elements as needed -->
-
-            </LinearLayout>
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/cardEmployeesToday"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/cardTotalEmployees"
-            android:layout_margin="16dp">
-
-            <!-- Nội dung của CardView thống kê Nhân viên đi làm trong hôm nay -->
-            <!-- ... -->
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:padding="16dp">
-
-                <!-- Add TextView, ImageView, ProgressBar, etc. for your content -->
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Nhân viên đi làm trong hôm nay"
-                    android:textSize="18sp" />
-
-                <!-- Add other UI elements as needed -->
-
-            </LinearLayout>
-
-        </androidx.cardview.widget.CardView>
-
-        <!-- Thêm các CardView khác nếu cần -->
-
-        <com.github.mikephil.charting.charts.BarChart
-            android:id="@+id/idBarChart"
-            android:layout_width="match_parent"
-            android:layout_height="400dp"
-            android:layout_marginTop="15dp"
-            android:layout_below="@+id/cardEmployeesToday"
-            />
         <LinearLayout
-            android:id="@+id/btnChangeDay"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/idBarChart"
-            android:weightSum="2"
-            android:layout_marginTop="15dp"
-
-            >
-            <Button
-                android:id="@+id/btnPrevious"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="-7"
-                android:layout_weight="1"
-                />
-            <Button
-                android:id="@+id/btnNext"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="7"
-                android:layout_weight="1"
-                />
-        </LinearLayout>
-        <TableLayout
-            android:id="@+id/tableLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="15dp"
-            android:paddingLeft="5dp"
-            android:paddingRight="5dp"
-            android:layout_below="@+id/btnChangeDay"
-
-            >
+            android:orientation="vertical"
+            android:layout_marginBottom="30dp">
 
             <TextView
-                android:id="@+id/txt"
+                android:id="@+id/tvTotal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="New Employees"
-                android:textSize = "20dp"
-                android:textStyle="bold">
+                android:padding="20dp"
+                android:fontFamily="sans-serif-condensed-medium"
+                android:text="Total number of staffs:"
+                android:textSize="16sp" />
 
-            </TextView>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="20dp"
+                android:fontFamily="sans-serif-condensed-medium"
+                android:text="Working Staffs:"
+                android:textSize="16sp" />
 
-
-            <TableRow android:background="#51B435" android:padding="10dp">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="Email" />
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="Name" />
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="Age" />
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="Gender" />
-            </TableRow>
-        </TableLayout>
-
-    </RelativeLayout>
+            <com.github.mikephil.charting.charts.BarChart
+                android:id="@+id/barChart"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"/>
 
 
-</ScrollView>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="20dp"
+                android:fontFamily="sans-serif-condensed-medium"
+                android:text="Detail:"
+                android:textSize="16sp" />
+
+            <com.prolificinteractive.materialcalendarview.MaterialCalendarView
+                android:id="@+id/calendar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp" />
+
+        </LinearLayout>
+    </ScrollView>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
