--- a/app/src/main/res/layout/activity_schedule.xml
+++ b/app/src/main/res/layout/activity_schedule.xml
@@ -2,7 +2,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/backgroun1">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
@@ -130,7 +131,7 @@
             android:layout_gravity="center"
             android:gravity="center"
             android:paddingTop="20dp"
-            android:text="" />
+            android:textSize="20sp" />
     </LinearLayout>
 
     <Button
