--- a/app/src/main/res/layout/dialog_detail_day.xml
+++ b/app/src/main/res/layout/dialog_detail_day.xml
@@ -25,7 +25,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="right">
+        android:gravity="center">
 
         <Button
             android:id="@+id/btnOK"
